<resources>
    <string name="app_name">DigitalCard</string>
    <string name="vence_el_01_01_01">Vence el 01-01-01</string>
    <string name="has_usado_soles_s_0_00">Has usado Soles: S/.0.00</string>
    <string name="de_s_0_00">De S/.0.00</string>
    <string name="_0000000000000000">0000000000000000</string>
    <string name="login_loading">Cargando</string>
    <string name="tu_tarjeta_no_debe_exceder_s_0_00">Tu tarjeta no debe exceder: S/.0.00</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento:</string>
    <string name="linea_s">Linea S/.:</string>
    <string name="tu_linea_de_credito_es_de">tu linea de credito es de: S/.</string>
</resources>